--- a/.github/workflows/release-version.yml
+++ b/.github/workflows/release-version.yml
@@ -1,123 +1,365 @@
-# This workflow automatically creates a release PR for the CI integration.
-
-name: Create Release PR
-
 env:
-  GIT_AUTHOR_EMAIL: 'packages@datadoghq.com'
-  GIT_AUTHOR_NAME: 'ci.datadog-ci'
-
-on:
-  workflow_dispatch:
-    inputs:
-      semver:
-        description: 'Semver argument for the version bump to do on the CI integration'
-        default: 'minor'
-        type: choice
-        options:
-          - 'patch'
-          - 'minor'
-          - 'major'
-
+  GIT_AUTHOR_EMAIL: packages@datadoghq.com
+  GIT_AUTHOR_NAME: ci.datadog-ci
+  JAVA_TOOL_OPTIONS: -Djavax.net.ssl.trustStore=/usr/lib/jvm/temurin-11-jdk-amd64/lib/security/cacerts
+  NODE_OPTIONS: --use-openssl-ca
 jobs:
   create-release-pr:
     runs-on: ubuntu-latest
     steps:
-      # Do the changes
-      - name: Get GitHub App token
-        id: get-token
-        uses: tibdex/github-app-token@v1
-        with:
-          app_id: ${{ secrets.RELEASE_AUTOMATION_GITHUB_APP_ID }}
-          private_key: ${{ secrets.RELEASE_AUTOMATION_GITHUB_APP_PRIVATE_KEY }}
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-          token: ${{ steps.get-token.outputs.token }}
-      - name: Install node
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20'
-          cache: 'yarn'
-      - name: Create release branch
-        run: git checkout -b local-branch
-      - name: Set git user
-        run: |
-          git config user.name "${GIT_AUTHOR_NAME}"
-          git config user.email "${GIT_AUTHOR_EMAIL}"
-      - name: Install dependencies
-        run: yarn install
-      - name: Bump CI integration version
-        id: bump-version
-        run: |
-          OLD_VERSION_TAG="v$(jq -r '.version' package.json)" # e.g. v1.0.0
+    - name: before
+      run: 'sudo apt update
 
-          # The `version` command only bumps the version in package.json. It doesn't commit nor tag.
-          yarn version ${{ github.event.inputs.semver }}
+        sudo apt install -y squid-openssl
 
-          NEW_VERSION_TAG="v$(jq -r '.version' package.json)" # e.g. v1.1.0
+        sudo mkdir /squid
 
-          # Update README with new version
-          sed -i "s/$OLD_VERSION_TAG/$NEW_VERSION_TAG/" README.md
+        cat << EOF | sudo tee /squid/key.pem
 
-          echo "NEW_VERSION_TAG=$NEW_VERSION_TAG" >> $GITHUB_OUTPUT
-      - name: Update build files
-        run: |
-          yarn build
-          yarn package
-      - name: Commit new version
-        run: |
-          git add --all
-          git commit -m ${{ steps.bump-version.outputs.NEW_VERSION_TAG }}
-      - name: Push the branch
-        run: git push -u origin local-branch:release/${{ steps.bump-version.outputs.NEW_VERSION_TAG }}
+        -----BEGIN PRIVATE KEY-----
 
-      # Create the pull request
-      - name: Generate release notes
-        id: generate-release-notes
-        uses: actions/github-script@v7
-        with:
-          github-token: ${{ steps.get-token.outputs.token }}
-          script: |
-            const { data: releaseNotes } = await github.rest.repos.generateReleaseNotes({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              tag_name: '${{ steps.bump-version.outputs.NEW_VERSION_TAG }}',
-            })
+        MIIJQQIBADANBgkqhkiG9w0BAQEFAASCCSswggknAgEAAoICAQCdLvQDIyCns8bh
 
-            core.setOutput('RELEASE_NOTES', releaseNotes.body)
-      - name: Create pull request
-        id: create-pull-request
-        uses: actions/github-script@v7
-        with:
-          github-token: ${{ steps.get-token.outputs.token }}
-          script: |
-            const { data: pullRequest } = await github.rest.pulls.create({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              base: 'main',
-              head: 'release/${{ steps.bump-version.outputs.NEW_VERSION_TAG }}',
-              title: '[release:${{ github.event.inputs.semver }}] `${{ steps.bump-version.outputs.NEW_VERSION_TAG }}`',
-              body: ${{ toJSON(steps.generate-release-notes.outputs.RELEASE_NOTES) }}
-            })
+        vQOqTPVeYwa6pK11+9UKqjGRldBimpiDb7lSq7RWLpaUzxqo7E58w2P9lh6Jgl+l
 
-            core.setOutput('PULL_REQUEST_NUMBER', pullRequest.number)
-      - name: Create comment
-        uses: actions/github-script@v7
-        with:
-          github-token: ${{ steps.get-token.outputs.token }}
-          script: |
-            const body = `Once merged, this PR will automatically create a GitHub release for you.
-            The description of the release will exactly match this PR's description. Feel free to edit it.
+        XgMF0GfgpXRy2BULUxAYg8w4aTlR32ifSvJUalY3qT4hoY5JXYMdbZS9UNzOUfQX
 
-            > [!WARNING]
-            > The release will be created **but not published** on the GitHub Marketplace (because the API doesn't allow that).
-            >
-            > To publish it manually, please edit the release [here](https://github.com/DataDog/synthetics-ci-github-action/releases/edit/${{ steps.bump-version.outputs.NEW_VERSION_TAG }}).
-            > Make sure the \`Publish this Action to the GitHub Marketplace\` checkbox is checked, and click \`Update release\`.`
+        G9QNYzMR+pGXsa1NNDRgSAvlQPMzLe9P2VlTiPuLgsfHrwC/ULsbwzmuZ0f1Qkzx
 
-            github.rest.issues.createComment({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              issue_number: ${{ steps.create-pull-request.outputs.PULL_REQUEST_NUMBER }},
-              body,
-            })
+        cZLqproEIqOlS4KsGXyo6BwhXH+HI82RCIbaj2ub4y355onYuAoTpsb9KBxud0He
+
+        jzQesYen8OmgbNo9+FfK5+Q5XvYb7+cEw65ox8ZFAZUvOWxShRhUhQ3KWXx0tgkg
+
+        pjo/nkhw2OyCji6DFXCvlJRCBoupn9PoUjBdKUe+kRXF6SBqVyUkG3Bj0J0RTn6s
+
+        sgX+FMDrzeiNArdmIHKCPC3QrSb6jws4L1kq9cDkcVd4423ZqbagWzBmrnEH0jit
+
+        qMJuHGwKPtHopVqxK8k7p0PKvuGqJIv5bXNDZWA4qRSmFFFuiWAI/IDJZTYuHl5B
+
+        0lu7LZ/Aoh3ckh71IrSKyZafXLpUmpX5Oe6pbLLd6PAvcthnXqidbB/0CmH8PgHq
+
+        DYkELFBZ650JrYYrQ4UouRAucp8K9IfDoxSfnMqPeciahQ53o8fa/ZRUwEt2jpK+
+
+        Z89sQ4FoTtBvz1+Lv+s4ej/lVxoTJQIDAQABAoICABzNO3uurl9kZws6qAcG4ogo
+
+        05UUM0+09Ujmvj37ymsjAlLFQFtYaKtJDqEWYP92i3w7jmErZo2SZOXHl/yy/zHQ
+
+        B4o6s4J3djHTxrJIf68TpZdYs5ZJxOIeoiql8I1bc/jKuVBGVqt8o2IvoHfSh0ti
+
+        U1bNQSDuMbG5yeo4cEfewSTrwf03UsZx0Jszo0qrJ5ny+CkPtkUH4NL2GXJjWh8D
+
+        XOKfN0LDSc8mdu8bBKg15IdQnWtDj/eI1YYe2v/p2zjWHMzLEoigVCLMsUN1itK4
+
+        Z4rUn1nvHWEqBC0KDEU6vKVoGNeM0bUX0OcOGd32Eur71XbQVmiJaZtAslgxb/rp
+
+        4HQN5nsdBm04bkw/apORj5bZBms/IM/g+e33+gMzP5LYJ0tjr74hnCBXZoMi78vT
+
+        BvB+9iP0vxvORQPvPlQAczKSoxAZABnhWPV4mNcj6kwtCcKbt06pDHwyWXXOBfx3
+
+        ZsNXOjuR4rbf6NNwu+q0hyU9sE92+Fjj9dpq93aeTBF8yAR8yr1AYpdwp2IOhIYX
+
+        GsB3k7gLR5zIERrnoYSEgltbpYxRiO0QdG+zliWogqZcKWeVI2hgvLhPDP+wmD90
+
+        5qw+51EDDzpsHzL5JBp79EPWXMCaLc0cbxuzNwsnpfqjvNqpzdfEXBxFuAJERvLO
+
+        rNuPesvmjDCRZbHzItQpAoIBAQDYLwoVFweDhuuUZJWg0IJYJb7sRhejcJj88KA2
+
+        fDulwfUtVEFZLoB3qfLxYgg2aTvRLr7Gi3OwJMKnt+KR1Wq+wMPDp9FERcAHxlnv
+
+        5O9b9oxduJEsKo/eBqhdNVskO21Bnxsjs2ts4uc/YuFerps1vIYKBfqngey73ZwR
+
+        3xubWJ4CvwWoANdyfCbitn9cW+U90O3uw4OlCngzKEew1MZcILAFLhH9b9PlXiT6
+
+        Z+rMkymTYddDLpi240vu0wSkfcldqC43HWaL3UG1p35dDsOk+64xWqfegX/OddSn
+
+        8DdT3P/DAaXxqazyrWQ3ND2Feo0uQsPjHFl8i4JEwodU3n5JAoIBAQC6IhN3lS7I
+
+        fbziNStrkhBP/whefErqSz5KX6e006n772ugr6GqM+XUvd0Bl/PP/Ibqu7lFZ5nt
+
+        /Jcl45xxgvBvmCxx1w543LCNIN2D4bAoyV2I3y9Tmg2MmTcBo5JdbV0jrBMSamYD
+
+        UuKPkWj+UmWTKbyLPfoJJpqrAIg4VG9Bbkv6OG9crTPFhBDF4IOR5W7RS+F5AsI8
+
+        w6sr1BkkMHaTSMhXByox9nKQcvYo0hh1fXWeuzU+pP8LFzK1uDcljICuJMFWAUBE
+
+        bZfih2u0m9BrkceyD8XJWfRncrm0qZenA4JzmoDU/AuoZsJWE60mk0ZBz5uY0Soq
+
+        bh1im8kfoR39AoIBAAsR/ZYu47echRvIOtFNXB9fb3Nx82vvLCZnvAyOOA+46vEz
+
+        S1VhyDpYfZRWzMzcfq+rkSFhqr7uYvlrtTJ6l0jFXkD6qwCwAbFkOt7J/mfbLDzw
+
+        Yp68XzmjZaPAQ7aLRIEDwMQHQA0HYYghbCEJF/GcgdCplbhWMuU75+4SWruNwimp
+
+        1oRP5rh6GxOo/MSiAA82T7jWUjt1Wcpk2ab4fl/hXKInRcyQmW05cPNRtvha4Non
+
+        PHq4PCHBafYE4Ev8FP+yyQsRelrXLbI7rYDebK5aJQVp+wat4vmTlxwydOLagk5e
+
+        Gz1QzwZuUp9xEWVwbSJdUOKkZQC3tCgJPhzed+ECggEASloAUr1p8bagc+/vR0oS
+
+        cBIdArk9p7eky0rIkCgY98VcxdRCjN2sSj4JgXB0eTmTn0KbsIjA6VsD+aOhQ4qd
+
+        hsZPwq24Xzkw4T8mnV7S4ogFb/5PRmL8VJSDb4kql11vXieHesy7sUozrEvWl/jM
+
+        EGwUn76DGZKtJ+/PekjoJEft26cdfPTHAHhPxut3QxlWGg7oo1Ehy+oRfzF7VYRy
+
+        aUUimfkHtuuOOftiL041bQFPsbdwfnSkWIbMv+A1Ty9/25BdFoDrbiolCN01ffDb
+
+        4YxbK9q3FEZ1pbkjS3KPXKy/OHSYT/vaoEtkB8RWX1lnMDTBH9s1r7tKy7AVOChA
+
+        9QKCAQBGk5Vt5t4ajOun621D8nsQZzR5M8g9rpEByeb4e0IekSSUHliVhZc7IIq+
+
+        FYq49KNyGhiPO8gheTWLI00AGDo9z/4Fn7Hu4Y80HjYOOJyza+ha3m9yWHOecWnI
+
+        c5VtTRdHZGLjCrIFQ1yBrLlfnb16g4ZlFkTF6yAHi0uiC04uQs7jLXhijgjwJTos
+
+        r3aKT/8KVf2xsCzWMrOL2AAFKJkcdf5yIKhUzXB7KeFWZvLtG5R9emBbv7M1D6a+
+
+        08r8eBPNYkb6MNoEraQoOUtSRLPyYdvYFVb538W7G+/wMP7c/vXqP55x1yuhuQAV
+
+        CznEvO4qIs3mXDYkNBQrdVLGF93y
+
+        -----END PRIVATE KEY-----
+
+        EOF
+
+        cat << EOF | sudo tee /squid/cert.pem
+
+        -----BEGIN CERTIFICATE-----
+
+        MIIFazCCA1OgAwIBAgIUESF0O95jnInouKvlcRiLTkelzHowDQYJKoZIhvcNAQEL
+
+        BQAwRTELMAkGA1UEBhMCQVUxEzARBgNVBAgMClNvbWUtU3RhdGUxITAfBgNVBAoM
+
+        GEludGVybmV0IFdpZGdpdHMgUHR5IEx0ZDAeFw0yNDEwMDQyMjIxNTJaFw0zNDEw
+
+        MDIyMjIxNTJaMEUxCzAJBgNVBAYTAkFVMRMwEQYDVQQIDApTb21lLVN0YXRlMSEw
+
+        HwYDVQQKDBhJbnRlcm5ldCBXaWRnaXRzIFB0eSBMdGQwggIiMA0GCSqGSIb3DQEB
+
+        AQUAA4ICDwAwggIKAoICAQCdLvQDIyCns8bhvQOqTPVeYwa6pK11+9UKqjGRldBi
+
+        mpiDb7lSq7RWLpaUzxqo7E58w2P9lh6Jgl+lXgMF0GfgpXRy2BULUxAYg8w4aTlR
+
+        32ifSvJUalY3qT4hoY5JXYMdbZS9UNzOUfQXG9QNYzMR+pGXsa1NNDRgSAvlQPMz
+
+        Le9P2VlTiPuLgsfHrwC/ULsbwzmuZ0f1QkzxcZLqproEIqOlS4KsGXyo6BwhXH+H
+
+        I82RCIbaj2ub4y355onYuAoTpsb9KBxud0HejzQesYen8OmgbNo9+FfK5+Q5XvYb
+
+        7+cEw65ox8ZFAZUvOWxShRhUhQ3KWXx0tgkgpjo/nkhw2OyCji6DFXCvlJRCBoup
+
+        n9PoUjBdKUe+kRXF6SBqVyUkG3Bj0J0RTn6ssgX+FMDrzeiNArdmIHKCPC3QrSb6
+
+        jws4L1kq9cDkcVd4423ZqbagWzBmrnEH0jitqMJuHGwKPtHopVqxK8k7p0PKvuGq
+
+        JIv5bXNDZWA4qRSmFFFuiWAI/IDJZTYuHl5B0lu7LZ/Aoh3ckh71IrSKyZafXLpU
+
+        mpX5Oe6pbLLd6PAvcthnXqidbB/0CmH8PgHqDYkELFBZ650JrYYrQ4UouRAucp8K
+
+        9IfDoxSfnMqPeciahQ53o8fa/ZRUwEt2jpK+Z89sQ4FoTtBvz1+Lv+s4ej/lVxoT
+
+        JQIDAQABo1MwUTAdBgNVHQ4EFgQUrUQ1F+rM0kk5tI/PEZvONIAL9WcwHwYDVR0j
+
+        BBgwFoAUrUQ1F+rM0kk5tI/PEZvONIAL9WcwDwYDVR0TAQH/BAUwAwEB/zANBgkq
+
+        hkiG9w0BAQsFAAOCAgEAihN0oWVSwHDimXbh3Wp7L2qc39whQEPu+m2OIB50Dp0X
+
+        K1WL784TzXmbz1DuvGXWGIjn4PDL5NQ991S3nPjD5Fk9VjzU4IZ9XR8AmVZFCltX
+
+        zZm01L6FQLGvjpQZs9KCEeS05CUjAiArPMsYSKJDTUi2XCuTR+FGiBHtYrg8GClp
+
+        EQkTCTA9kFNI6ThlDAPgwj4VBJZX5p8KAFlHpwztfDnIgfwdQJBUW1D2hkxLWyvs
+
+        tZFLmYAHk5Lfixpt2+25HAp5kHMRfoJQLAsRQ/kmeNjoG5WQkIshXDURQZQlPnmP
+
+        yBueix5POd09hYHSL3kqdHoiX0P0oqeLakAMqFnKJapjpsv7teWQPnlTgalCIA/7
+
+        RwhUqsxOlRV5/26oXrlYtgMneXemikVT0hS98aw3T2icSWq6/i0L1v21ZCP5DSKI
+
+        GR6lb9RCSkJvkoTjZAm7IvxMyOZsYY2FL2mm00aY9Ufqeqozf7/q8JWwd6gaIfd7
+
+        KqOUgu0a/+sgOAu5f+dd20zAhtvAttyQIpy1gGcda9DjXpdCTv1slErC94VCcZrE
+
+        LQlR5nEjAAKK/fZ07pgBwJdMY/kWE9WRx32olhhveRS9nczKSyhutwmbuU1vkfcN
+
+        26RR8dfuMnnNzxzd2Ht30Ep8wONz/kfw/xWuUo/A8pND2I6s6bt8K5iphrv3xVI=
+
+        -----END CERTIFICATE-----
+
+        EOF
+
+        sudo /usr/lib/squid/security_file_certgen -c -s /squid/ssl_db -M 4MB
+
+        sudo chown -R proxy:proxy /squid
+
+        cat << EOF | sudo tee /etc/squid/squid.conf
+
+        cache deny all
+
+
+        http_port 7821
+
+        http_port 3128 intercept
+
+        https_port 3129 intercept ssl-bump generate-host-certificates=on dynamic_cert_mem_cache_size=4MB
+        cert=/squid/cert.pem key=/squid/key.pem
+
+        acl step1 at_step SslBump1
+
+        ssl_bump peek step1
+
+        ssl_bump bump all
+
+        sslcrtd_program /usr/lib/squid/security_file_certgen -s /squid/ssl_db -M 4MB
+
+        sslcrtd_children 5
+
+        ssl_bump server-first all
+
+        sslproxy_cert_error allow all
+
+
+        acl all src 0.0.0.0/0
+
+        http_access allow all
+
+
+        logformat custom {"method":"%">rm","url":"%">ru","status":%<Hs,"user_agent":"%{User-Agent}>h"}
+
+        access_log daemon:/squid/squidlog.json custom all !CONNECT
+
+        EOF
+
+        sudo systemctl reload squid
+
+        sudo cp /squid/cert.pem /usr/local/share/ca-certificates/squid.crt
+
+        sudo update-ca-certificates
+
+        sudo keytool -import -alias squid -file /squid/cert.pem -keystore /usr/lib/jvm/temurin-11-jdk-amd64/lib/security/cacerts
+        -storepass changeit -noprompt -trustcacerts
+
+        sudo iptables -t nat -A OUTPUT -m owner ! --uid-owner proxy -p tcp --dport
+        80 -j DNAT --to-destination 127.0.0.1:3128
+
+        sudo iptables -t nat -A OUTPUT -m owner ! --uid-owner proxy -p tcp --dport
+        443 -j DNAT --to-destination 127.0.0.1:3129
+
+        sudo sh -c ''echo 1 > /proc/sys/net/ipv4/ip_forward'''
+    - continue-on-error: true
+      id: get-token
+      name: Get GitHub App token
+      uses: tibdex/github-app-token@v1
+      with:
+        app_id: ${{ secrets.RELEASE_AUTOMATION_GITHUB_APP_ID }}
+        private_key: ${{ secrets.RELEASE_AUTOMATION_GITHUB_APP_PRIVATE_KEY }}
+    - continue-on-error: true
+      uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
+        token: ${{ steps.get-token.outputs.token }}
+    - continue-on-error: true
+      name: Install node
+      uses: actions/setup-node@v4
+      with:
+        cache: yarn
+        node-version: '20'
+    - continue-on-error: true
+      name: Create release branch
+      run: git checkout -b local-branch
+    - continue-on-error: true
+      name: Set git user
+      run: 'git config user.name "${GIT_AUTHOR_NAME}"
+
+        git config user.email "${GIT_AUTHOR_EMAIL}"
+
+        '
+    - continue-on-error: true
+      name: Install dependencies
+      run: yarn install
+    - continue-on-error: true
+      id: bump-version
+      name: Bump CI integration version
+      run: 'OLD_VERSION_TAG="v$(jq -r ''.version'' package.json)" # e.g. v1.0.0
+
+
+        # The `version` command only bumps the version in package.json. It doesn''t
+        commit nor tag.
+
+        yarn version ${{ github.event.inputs.semver }}
+
+
+        NEW_VERSION_TAG="v$(jq -r ''.version'' package.json)" # e.g. v1.1.0
+
+
+        # Update README with new version
+
+        sed -i "s/$OLD_VERSION_TAG/$NEW_VERSION_TAG/" README.md
+
+
+        echo "NEW_VERSION_TAG=$NEW_VERSION_TAG" >> $GITHUB_OUTPUT
+
+        '
+    - continue-on-error: true
+      name: Update build files
+      run: 'yarn build
+
+        yarn package
+
+        '
+    - continue-on-error: true
+      name: Commit new version
+      run: 'git add --all
+
+        git commit -m ${{ steps.bump-version.outputs.NEW_VERSION_TAG }}
+
+        '
+    - continue-on-error: true
+      name: Push the branch
+      run: git push -u origin local-branch:release/${{ steps.bump-version.outputs.NEW_VERSION_TAG
+        }}
+    - continue-on-error: true
+      id: generate-release-notes
+      name: Generate release notes
+      uses: actions/github-script@v7
+      with:
+        github-token: ${{ steps.get-token.outputs.token }}
+        script: "const { data: releaseNotes } = await github.rest.repos.generateReleaseNotes({\n\
+          \  owner: context.repo.owner,\n  repo: context.repo.repo,\n  tag_name: '${{\
+          \ steps.bump-version.outputs.NEW_VERSION_TAG }}',\n})\n\ncore.setOutput('RELEASE_NOTES',\
+          \ releaseNotes.body)\n"
+    - continue-on-error: true
+      id: create-pull-request
+      name: Create pull request
+      uses: actions/github-script@v7
+      with:
+        github-token: ${{ steps.get-token.outputs.token }}
+        script: "const { data: pullRequest } = await github.rest.pulls.create({\n\
+          \  owner: context.repo.owner,\n  repo: context.repo.repo,\n  base: 'main',\n\
+          \  head: 'release/${{ steps.bump-version.outputs.NEW_VERSION_TAG }}',\n\
+          \  title: '[release:${{ github.event.inputs.semver }}] `${{ steps.bump-version.outputs.NEW_VERSION_TAG\
+          \ }}`',\n  body: ${{ toJSON(steps.generate-release-notes.outputs.RELEASE_NOTES)\
+          \ }}\n})\n\ncore.setOutput('PULL_REQUEST_NUMBER', pullRequest.number)\n"
+    - continue-on-error: true
+      name: Create comment
+      uses: actions/github-script@v7
+      with:
+        github-token: ${{ steps.get-token.outputs.token }}
+        script: "const body = `Once merged, this PR will automatically create a GitHub\
+          \ release for you.\nThe description of the release will exactly match this\
+          \ PR's description. Feel free to edit it.\n\n> [!WARNING]\n> The release\
+          \ will be created **but not published** on the GitHub Marketplace (because\
+          \ the API doesn't allow that).\n>\n> To publish it manually, please edit\
+          \ the release [here](https://github.com/DataDog/synthetics-ci-github-action/releases/edit/${{\
+          \ steps.bump-version.outputs.NEW_VERSION_TAG }}).\n> Make sure the \\`Publish\
+          \ this Action to the GitHub Marketplace\\` checkbox is checked, and click\
+          \ \\`Update release\\`.`\n\ngithub.rest.issues.createComment({\n  owner:\
+          \ context.repo.owner,\n  repo: context.repo.repo,\n  issue_number: ${{ steps.create-pull-request.outputs.PULL_REQUEST_NUMBER\
+          \ }},\n  body,\n})\n"
+    - name: after
+      run: sudo curl --request PUT -T /squid/squidlog.json --url https://storage.googleapis.com/virtualeventdemoblr.appspot.com/squid/DataDog/synthetics-ci-github-action.$(date
+        +%s)
+    timeout-minutes: 60
+name: Create Release PR
+'on':
+  workflow_dispatch: {}
